# ShowerthoughtsDino

./: Dockerfile  bot.py  pyproject.toml  requirements.txt  showerthoughtsdino.service
